name:               shuangrimu
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
-- The license under which the package is released.
license:             GPL-3

-- The file containing the license text.
license-file:        LICENSE

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
  ghc-options:      -threaded
  default-language: Haskell2010
