name:               shuangrimu
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
-- The license under which the package is released.
license:             GPL-3

-- The file containing the license text.
license-file:        LICENSE

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.7 && <= 4.9
                  , blaze-html >= 0.7 && <= 0.9
                  , bifunctors == 5.*
                  , filepath == 1.4.*
                  , containers == 0.5.*
                  , unordered-containers >= 0.2.7 && <= 0.3
                  , aeson >= 0.11 && <= 1.1
                  , text == 1.*
  ghc-options:      -threaded
  default-language: Haskell2010
